--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
 *{
   font-family: 'Barlow Semi Condensed', sans-serif;
 }
-
-
+body{
+  background-color: hsl(210, 46%, 95%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main{
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+  max-width: 1100px;
+}
+main > div{
+  padding: 20px 30px;
+  border-radius: 10px;
+}
 .profile{
   display: flex;
   align-items: center;
@@ -13,23 +29,60 @@ img{
   border: 1px solid white;
   width: 50px;
 }
-/* .name{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-} */
 h1{
   margin-bottom: 0;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
+  color: hsl(210, 46%, 95%);
+}
+.name p{
+  opacity: 0.5;
+  margin-top: 0;
+}
+h2{
+  margin:0 auto;
+  color: hsl(210, 46%, 95%);
+  font-size: 22px;
 }
 p{
   font-size: 13px;
-}
-.name p{
-  margin-top: 0;
+  opacity: 0.7;
+  color: hsl(210, 46%, 95%);
 }
 .purple{
   background-color: hsl(263, 55%, 52%);
+  background-image: url('./images/bg-pattern-quotation.svg');
+  background-repeat: no-repeat;
+  background-position: 80% 0;
+  grid-column: 1/3;
+}
+.purple h1, .purple p, .purple h2{
+  color: hsl(210, 46%, 95%);
+}
+.gray{
+  background-color: hsl(217, 19%, 35%);
+}
+.white{
+  background-color: white;
+  box-shadow: 3px 3px 3px hsl(0, 0%, 81%);
+}
+.white h1, .white p, .white h2{
+  color: hsl(219, 29%, 14%);
+}
+.black{
+  background-color: hsl(219, 29%, 14%);
+  grid-column: 2/4;
+}
+.white-big{
+  grid-column: 4;
+  grid-row: 1/3;
+}
+
+
+@media screen and (max-width:672px) {
+  main{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+  }
 }
